--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 	<header id="header" class="clearfix">
 			<hgroup id="logo-area">
 								<h1 id="logo">
-					<a href="http://greatwallclub.com" title="GMIC">Global Mobile Internet Conference</a>
+					<span>Global Mobile Internet Conference</span>
 				</h1>
 				
 			</hgroup>
 			
-			<nav id="top-menu">
+			<!--<nav id="top-menu">
 				<ul id="menu-new-menu" class="nav"><li id="menu-item-17" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-17"><a href="http://en.greatwallclub.com" target="_blank">By GWC</a></li>
-</ul>			</nav> <!-- end #top-menu -->
+</ul>			</nav>--> <!-- end #top-menu -->
 
 					
 	</header> 
@@ -74,7 +74,7 @@
 	<div class="footer_wrap">
 		<footer id="main_footer" class="clearfix">
 			<p class="social-buttons clearfix"><a id="fb" href="http://www.facebook.com/theGMIC" target="_blank"><img src="images/social-buttons.png" /></a><a id="tt" href="http://www.twitter.com/theGMIC" target="_blank"><img src="images/social-buttons-02.png" /></a><a id="in" href="http://www.linkedin.com/groups?gid=2825839&trk=hb_side_g" target="_blank"><img src="images/social-buttons-03.png" /></a><a id="em" href="mailto: info@greatwallclub.com" target="_blank"><img src="images/social-buttons-05.png" /></a></p>
-			<p><img src="images/copyright.jpg" /></p>
+			<p><a href="www.greatwallclub.com"><img src="images/copyright.jpg" /></a></p>
 		</footer> <!-- end #main_footer -->
 		</div> <!-- end .footer_wrap -->
 	    </div>
