GWC links change
open in a new tab

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<div class="footer_wrap">
 		<footer id="main_footer" class="clearfix">
 			<p class="social-buttons clearfix"><a id="fb" href="http://www.facebook.com/theGMIC" target="_blank"><img src="images/social-buttons.png" /></a><a id="tt" href="http://www.twitter.com/theGMIC" target="_blank"><img src="images/social-buttons-02.png" /></a><a id="in" href="http://www.linkedin.com/groups?gid=2825839&trk=hb_side_g" target="_blank"><img src="images/social-buttons-03.png" /></a><a id="em" href="mailto: info@greatwallclub.com" target="_blank"><img src="images/social-buttons-05.png" /></a></p>
-			<p><a href="http://www.greatwallclub.com"><img src="images/copyright.jpg" /></a></p>
+			<p><a href="http://www.greatwallclub.com" target="_blank"><img src="images/copyright.jpg" /></a></p>
 		</footer> <!-- end #main_footer -->
 		</div> <!-- end .footer_wrap -->
 	    </div>
