--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
 <div id="speaker_slider" class="image_carousel">
 	<p>Featuring</p>
 	<ul id="foo1">
-		<li id="speaker2"><a href="http://www.gmic-sv.com/osama-bedier/"></a><span>Osama Bedier</span><span>VP, Google</span></li>
-		<li id="speaker3"><a href="http://gmic2012.greatwallclub.com/speaker/charles-chao"></a><span>Charles Chao</span><span>CEO, Sina</span></li>
-		<li id="speaker4"><a href="http://www.gmic-sv.com/lei-jun-2/"></a><span>Lei Jun</span><span>CEO, Xiaomi</span></li>
-		<li id="speaker12"><a href="http://www.gmic-sv.com/phil-libin/"></a><span>Phil Libin</span><span>CEO, Evernote</span></li>
-		<li id="speaker5"><a href="http://gmic2012.greatwallclub.com/speaker/pony-ma"></a><span>Pony Ma</span><span>CEO, Tencent</span></li>
-		<li id="speaker6"><a href="http://www.gmic-sv.com/yuri-milner/"></a><span>Yuri Milner</span><span>Founder, DST Global</span></li>
-		<li id="speaker10"><a href="http://gmic2011.greatwallclub.com/speaker/isao-moriyasu"></a><span>Isao Moriyasu</span><span>CEO, DeNA</span></li>
-		<li id="speaker7"><a href="http://www.gmic-sv.com/john-riccitiello/"></a><span>John Riccitiello</span><span>CEO, Electronic Arts</span></li>
-		<li id="speaker8"><a href="http://www.gmic-sv.com/vaughan-smith/"></a><span>Vaughan Smith</span><span>VP, Facebook</span></li>
-		<li id="speaker9"><a href="http://gmic2011.greatwallclub.com/node/1574"></a><span>Yoshikazu Tanaka</span><span>CEO, Gree</span></li>	
-		<li id="speaker11"><a href="http://gmic2012.greatwallclub.com/speaker/naveen-tewari"></a><span>Naveen Tewari</span><span>CEO, Inmobi</span></li>
+		<li id="speaker2"><a href="#"></a><span>Osama Bedier</span><span>VP, Google</span></li>
+		<li id="speaker3"><a href="#"></a><span>Charles Chao</span><span>CEO, Sina</span></li>
+		<li id="speaker4"><a href="#"></a><span>Lei Jun</span><span>CEO, Xiaomi</span></li>
+		<li id="speaker12"><a href="#"></a><span>Phil Libin</span><span>CEO, Evernote</span></li>
+		<li id="speaker5"><a href="#"></a><span>Pony Ma</span><span>CEO, Tencent</span></li>
+		<li id="speaker6"><a href="#"></a><span>Yuri Milner</span><span>Founder, DST Global</span></li>
+		<li id="speaker10"><a href="#"></a><span>Isao Moriyasu</span><span>CEO, DeNA</span></li>
+		<li id="speaker7"><a href="#"></a><span>John Riccitiello</span><span>CEO, Electronic Arts</span></li>
+		<li id="speaker8"><a href="#"></a><span>Vaughan Smith</span><span>VP, Facebook</span></li>
+		<li id="speaker9"><a href="#"></a><span>Yoshikazu Tanaka</span><span>CEO, Gree</span></li>	
+		<li id="speaker11"><a href="#"></a><span>Naveen Tewari</span><span>CEO, Inmobi</span></li>
 	</ul>
 	<div class="clearfix"></div>
 </div>
