change speakers title

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p style="padding: 12px 0 32px 0;color: #e3e3e3; font-size:18px;clear:both; text-align:center;">The Global Mobile Internet Conference brings together the world's emerging epicenters of mobile innovation to discuss the shifts, challenges and future opportunities in the fastest growing markets.</p>
 
 <div id="speaker_slider" class="image_carousel">
-	<p>Featuring</p>
+	<p>Past Speakers</p>
 	<ul id="foo1">
 		<li id="speaker2"><a href="#"></a><span>Osama Bedier</span><span>VP, Google</span></li>
 		<li id="speaker3"><a href="#"></a><span>Charles Chao</span><span>CEO, Sina</span></li>
