google analytics script; document links; twitter test

--- a/documents.html
+++ b/documents.html
@@ -75,7 +75,12 @@
   <tbody>
     <tr>
       <td align="center">Core Documents</td>
-      <td><p><a href="http://www.thegmic.com/GMIC-2013-Sponsorship-Opportunities.pdf">GMIC 2013 Sponsorship Opportunities</a></p>
+      <td>
+      	<p><a href="http://www.thegmic.com/GMIC-BEIJING-2013-Review.pdf">GMIC Beijing 2013 Review</a></p>
+      	<p><a href="https://creative.adobe.com/share/d2f5084d-a73e-410a-acf7-2bd8adcbb296">GWC High-res Logo</a></p>
+      	<p><a href="http://www.thegmic.com/GMICSV-2013-Prospectus.pdf">GMIC SV 2013 Prospectus</a></p>
+      	<p><a href="http://www.gmic-sv.com/GMIC_SV_BOOK.pdf">GMIC SV Book 2012</a></p>
+      	<p><a href="http://www.thegmic.com/GMIC-2013-Sponsorship-Opportunities.pdf">GMIC 2013 Sponsorship Opportunities</a></p>
         <p><a href="http://www.thegmic.com/GMIC-Beijing-2013-Brochure.pdf">GMIC Beijing 2013 Brochure</a></p></td>
     </tr>
     <tr>
