--- a/documents.html
+++ b/documents.html
@@ -122,7 +122,10 @@
     <tr>
       <td align="center">Core Documents</td>
       <td>
+      	<p><a href="http://www.thegmic.com/GMIC-New-Delhi-2014-Sponsorship.pdf">GMIC New Delhi 2014 Sponsorship</a></p>
+      	<p><a href="http://www.thegmic.com/2014GMIC_Tokyo-CN.pptx">GMIC Tokyo 2014 Presentation Chinese.pptx</a></p>
       	<p><a href="http://www.thegmic.com/GMIC-Beijing-2014-Sponsorship.pdf">GMIC Beijing 2014 Sponsorship</a></p>
+      	<p><a href="http://www.thegmic.com/GMIC-Beijing-2014-Sponsorship-cn.pdf">GMIC Beijing 2014 Sponsorship Chinese</a></p>
       	<p><a href="http://www.thegmic.com/GMIC-BEIJING-2013-Review.pdf">GMIC Beijing 2013 Review</a></p>
       	<p><a href="https://creative.adobe.com/share/d2f5084d-a73e-410a-acf7-2bd8adcbb296">GWC High-res Logo</a></p>
       	<p><a href="http://www.thegmic.com/GMICSV-2013-Prospectus.pdf">GMIC SV 2013 Prospectus</a></p>
